--- a/MusicApp/MusicApp.csproj
+++ b/MusicApp/MusicApp.csproj
@@ -263,6 +263,45 @@
     <Content Include="Images\logo.png" />
     <Content Include="Images\RapVietMua3.jpg" />
     <Content Include="Images\ReleaseRadar.jpg" />
+    <Content Include="Libs\roslyn\csc.exe" />
+    <Content Include="Libs\roslyn\csi.exe" />
+    <Content Include="Libs\roslyn\Microsoft.Build.Tasks.CodeAnalysis.dll" />
+    <Content Include="Libs\roslyn\Microsoft.CodeAnalysis.CSharp.dll" />
+    <Content Include="Libs\roslyn\Microsoft.CodeAnalysis.CSharp.Scripting.dll" />
+    <Content Include="Libs\roslyn\Microsoft.CodeAnalysis.dll" />
+    <Content Include="Libs\roslyn\Microsoft.CodeAnalysis.Scripting.dll" />
+    <Content Include="Libs\roslyn\Microsoft.CodeAnalysis.VisualBasic.dll" />
+    <Content Include="Libs\roslyn\Microsoft.DiaSymReader.Native.amd64.dll" />
+    <Content Include="Libs\roslyn\Microsoft.DiaSymReader.Native.x86.dll" />
+    <Content Include="Libs\roslyn\Microsoft.Win32.Primitives.dll" />
+    <Content Include="Libs\roslyn\System.AppContext.dll" />
+    <Content Include="Libs\roslyn\System.Collections.Immutable.dll" />
+    <Content Include="Libs\roslyn\System.Console.dll" />
+    <Content Include="Libs\roslyn\System.Diagnostics.DiagnosticSource.dll" />
+    <Content Include="Libs\roslyn\System.Diagnostics.FileVersionInfo.dll" />
+    <Content Include="Libs\roslyn\System.Diagnostics.StackTrace.dll" />
+    <Content Include="Libs\roslyn\System.Globalization.Calendars.dll" />
+    <Content Include="Libs\roslyn\System.IO.Compression.dll" />
+    <Content Include="Libs\roslyn\System.IO.Compression.ZipFile.dll" />
+    <Content Include="Libs\roslyn\System.IO.FileSystem.dll" />
+    <Content Include="Libs\roslyn\System.IO.FileSystem.Primitives.dll" />
+    <Content Include="Libs\roslyn\System.Net.Http.dll" />
+    <Content Include="Libs\roslyn\System.Net.Sockets.dll" />
+    <Content Include="Libs\roslyn\System.Reflection.Metadata.dll" />
+    <Content Include="Libs\roslyn\System.Runtime.InteropServices.RuntimeInformation.dll" />
+    <Content Include="Libs\roslyn\System.Security.Cryptography.Algorithms.dll" />
+    <Content Include="Libs\roslyn\System.Security.Cryptography.Encoding.dll" />
+    <Content Include="Libs\roslyn\System.Security.Cryptography.Primitives.dll" />
+    <Content Include="Libs\roslyn\System.Security.Cryptography.X509Certificates.dll" />
+    <Content Include="Libs\roslyn\System.Text.Encoding.CodePages.dll" />
+    <Content Include="Libs\roslyn\System.Threading.Tasks.Extensions.dll" />
+    <Content Include="Libs\roslyn\System.ValueTuple.dll" />
+    <Content Include="Libs\roslyn\System.Xml.ReaderWriter.dll" />
+    <Content Include="Libs\roslyn\System.Xml.XmlDocument.dll" />
+    <Content Include="Libs\roslyn\System.Xml.XPath.dll" />
+    <Content Include="Libs\roslyn\System.Xml.XPath.XDocument.dll" />
+    <Content Include="Libs\roslyn\vbc.exe" />
+    <Content Include="Libs\roslyn\VBCSCompiler.exe" />
     <Content Include="Models\DAPMMain.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>DAPMMain.edmx</DependentUpon>
@@ -288,6 +327,16 @@
     <Content Include="Models\DAPMMain.edmx.diagram">
       <DependentUpon>DAPMMain.edmx</DependentUpon>
     </Content>
+    <Content Include="Libs\roslyn\csc.exe.config" />
+    <Content Include="Libs\roslyn\csc.rsp" />
+    <Content Include="Libs\roslyn\csi.exe.config" />
+    <Content Include="Libs\roslyn\csi.rsp" />
+    <Content Include="Libs\roslyn\Microsoft.CSharp.Core.targets" />
+    <Content Include="Libs\roslyn\Microsoft.Managed.Core.targets" />
+    <Content Include="Libs\roslyn\Microsoft.VisualBasic.Core.targets" />
+    <Content Include="Libs\roslyn\vbc.exe.config" />
+    <Content Include="Libs\roslyn\vbc.rsp" />
+    <Content Include="Libs\roslyn\VBCSCompiler.exe.config" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
